// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`directionalProperty properly applies a value when passed only one 1`] = `Object {}`;

exports[`directionalProperty properly applies values when passed four 1`] = `Object {}`;

exports[`directionalProperty properly applies values when passed three 1`] = `Object {}`;

exports[`directionalProperty properly applies values when passed two 1`] = `Object {}`;

exports[`directionalProperty properly generates properties when passed a camelCased property 1`] = `Object {}`;

exports[`directionalProperty properly generates properties when passed a hyphenated property 1`] = `Object {}`;

exports[`directionalProperty properly passes just the position when not given a property 1`] = `
Object {
  "bottom": "12px",
  "left": "12px",
  "right": "12px",
  "top": "12px",
}
`;

exports[`directionalProperty properly skips bottom property when last value is null 1`] = `Object {}`;

exports[`directionalProperty properly skips bottom property when third value is null 1`] = `Object {}`;

exports[`directionalProperty properly skips left and right properties when second value is null 1`] = `Object {}`;

exports[`directionalProperty properly skips left property when fourth value is null 1`] = `Object {}`;

exports[`directionalProperty properly skips right and left properties when second value is null 1`] = `Object {}`;

exports[`directionalProperty properly skips right property when second value is null 1`] = `Object {}`;

exports[`directionalProperty properly skips top and bottom properties when first value is null 1`] = `Object {}`;

exports[`directionalProperty properly skips top property when first value is null 1`] = `Object {}`;

exports[`directionalProperty properly skips top property when first value is null 2`] = `Object {}`;

exports[`directionalProperty throws a warning when passed more than 5 parameters and properly ignores extra parameters 1`] = `Object {}`;

exports[`directionalProperty throws a warning when passed more than 5 parameters and properly ignores extra parameters 2`] = `
Array [
  Array [
    "%c ✨ WARNING ✨ ---- helpers/directionalProperty.js --%c

directionalProperty %cexpects a maximum of %c1 parameter%c. However, you passed %c6 parameters%c. These additional parameters were ignored.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#directionalProperty%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold; color: green",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold; color: goldenrod",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`directionalProperty throws an error when passed a non-string value for property 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- helpers/directionalProperty.js --%c

directionalProperty %cexpects a %c1st parameter%c(%cundefined %c:%c string%c). However, you passed (%c'true' %c:%c boolean%c) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#directionalProperty%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
  Array [
    "%c ✨ ERROR ✨ ---- helpers/directionalProperty.js --%c

directionalProperty %cexpects a %cparameter%c(%cundefined %c:%c undefined%c). However, you passed (%c'true' %c:%c boolean%c) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#directionalProperty%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;
